fixed not found page spacing for mobile

--- a/frontend/src/app/NotFound.module.css
+++ b/frontend/src/app/NotFound.module.css
@@ -24,11 +24,14 @@
 
   @media screen and (max-width: 600px) {
     .container {
-        padding-top: 400px;
+        padding-top: 250px;
         flex-direction: column;
     }
 
     .left, .right {
         width: 100%;
+    }
+    .left {
+      flex: 0;
     }
 }
